samples/_failures_safe/1761391553_a8dd8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06be5ab6.c: In function ‘main’:
./samples/SAFE/__tmp_06be5ab6.c:125:5: error: expected declaration or statement at end of input
  125 |     }
      |     ^
